@@ -328,6 +328,11 @@ associated getters and setters.</td>
 	<td class="summary">Set the room ID of a moveable.</td>
 	</tr>
 	<tr>
+	<td class="name" ><a href="#Moveable:GetMeshCount">Moveable:GetMeshCount()</a></td>
+	<td class="summary">Get number of meshes for a particular object
+ Returns number of meshes in an object</td>
+	</tr>
+	<tr>
 	<td class="name" ><a href="#Moveable:GetMeshVisible">Moveable:GetMeshVisible(index)</a></td>
 	<td class="summary">Get state of specified mesh visibility of object
  Returns true if specified mesh is visible on an object, and false
@@ -1673,6 +1678,28 @@ sas:SetAIBits({<span class="number">1</span>, <span class="number">0</span>, <sp
 sas:SetRoomNumber(newRoomID)
 sas:SetPosition(newPos, <span class="keyword">false</span>)</pre>
     </ul>
+
+</dd>
+    <dt>
+    <a name = "Moveable:GetMeshCount"></a>
+    <strong>Moveable:GetMeshCount()</strong>
+    </dt>
+    <dd>
+    Get number of meshes for a particular object
+ Returns number of meshes in an object
+
+
+
+
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><span class="type">int</span></span>
+        number of meshes
+    </ol>
+
+
+
 
 </dd>
     <dt>
