@@ -159,7 +159,8 @@ static constexpr char ScriptReserved_GetItemFlags[]			= "GetItemFlags";
 static constexpr char ScriptReserved_SetItemFlags[]			= "SetItemFlags";
 static constexpr char ScriptReserved_GetLocationAI[]		= "GetLocationAI";
 static constexpr char ScriptReserved_SetLocationAI[]		= "SetLocationAI";
-static constexpr char ScriptReserved_GetMeshVisable[]		= "GetMeshVisable";
+static constexpr char ScriptReserved_GetMeshCount[]			= "GetMeshCount";
+static constexpr char ScriptReserved_GetMeshVisible[]		= "GetMeshVisible";
 static constexpr char ScriptReserved_SetMeshVisible[]		= "SetMeshVisible";
 static constexpr char ScriptReserved_ShatterMesh[]			= "ShatterMesh";
 static constexpr char ScriptReserved_GetMeshSwapped[]		= "GetMeshShapped";
