@@ -21,6 +21,7 @@ Version 1.4
 
 Lua API changes:
 * Added resetHub flag to Flow.Level, which allows to reset hub data.
+* Added Moveable:GetMeshCount() function to get number of moveable meshes.
 
 Version 1.3
 ===========
